name:                horname
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/cocreature/horname#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          value
copyright:           (C) 2016 Moritz Kiefer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
tested-with:         GHC == 8.0.1

executable horname
  hs-source-dirs:      src
  other-modules:       Options
                       SMT
                       SMT.Parser
                       SMT.Pretty
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
                     , megaparsec >= 5.0 && < 5.2
                     , text >= 1.2 && < 1.3
                     , optparse-applicative >= 0.12 && < 0.14
                     , wl-pprint-text >= 1.1 && < 1.2
  ghc-options:         -Wall
